# Poke-Star-discord-bot

./: bot_token.py  details.py  main.py  pyproject.toml
auto-catcher/: auto.py  notify.py
cog/: channel.py  error.py  mod.py  shinyhunt.py  spam.py
